--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">text</span>
+                    <span class="sr-only">zack</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -53,16 +53,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">text</a>
+                        <a class="page-scroll" href="#about">hello</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">text</a>
+                        <a class="page-scroll" href="#services">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">text</a>
+                        <a class="page-scroll" href="#portfolio">Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">text</a>
+                        <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -74,10 +74,10 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>text</h1>
+                <h1>Engineer. Athlete. Creator.</h1>
                 <hr>
-                <p>text</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">text</a>
+                <p>Jack McCambridge</p>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
     </header>
@@ -88,7 +88,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">text</h2>
                     <hr class="light">
-                    <p class="text-faded">text</p>
+                    <p class="text-faded">Roll Josh Centor</p>
                     <a href="#" class="btn btn-default btn-xl">text</a>
                 </div>
             </div>
@@ -248,17 +248,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">text</h2>
+                    <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>text</p>
+                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>text</p>
+                    <p>610-597-2901</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">text</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">jmccambr@andrew.cmu.edu</a></p>
                 </div>
             </div>
         </div>
